gitops/argocd/apps/registry/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: registry
      containers:
        - name: registry
          image: registry:3.0.0
          ports:
            - name: registry
              protocol: TCP
              containerPort: 5000
          resources: {}
          volumeMounts:
            - name: registry
              mountPath: /var/lib/registry
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - name: registry
      targetPort: 5000
      port: 80
      protocol: TCP
