gitops/argocd/apps/registry/registry-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:main
          ports:
            - name: registry-ui
              protocol: TCP
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: registry
spec:
  type: ClusterIP
  selector:
    app: registry-ui
  ports:
    - name: registry-ui
      targetPort: 80
      port: 80
      protocol: TCP
