gitops/argocd/apps/registry/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  namespace: traefik
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      sectionName: websecure
  hostnames:
    - registry.satriashp.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: registry-custom-headers
      backendRefs:
        - group: ""
          kind: Service
          name: registry
          port: 80
          weight: 1
          namespace: registry
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-redirect
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
      sectionName: web
  hostnames:
    - "registry.satriashp.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-registry-from-traefik
  namespace: registry
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: ""
      kind: Service
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: registry-custom-headers
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      Access-Control-Allow-Origin: '[https://registry-ui.satriashp.cloud]'
      Access-Control-Allow-Methods: '[HEAD,GET,OPTIONS,DELETE]'
      Access-Control-Allow-Credentials: '[true]'
      Access-Control-Allow-Headers: '[Authorization,Accept,Cache-Control]'
      Access-Control-Expose-Headers: '[Docker-Content-Digest]'
